added node, npm, and web-dev example folders

--- a/live-servers/npm-live-server-normalize/index.html
+++ b/live-servers/npm-live-server-normalize/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="utf-8">
     <title>My Site</title>
+    <link rel="stylesheet" type="text/css" href="normalize.css">
     <link rel="stylesheet" type="text/css" href="style.css">
     <script type="text/javascript" src="script.js"></script>
   </head>
   <body>
     <h1>Testing npm-live-server</h1>
     <div>
-      <p>Hello</p>
-      <p>World</p>
+      <p>Using Normalze.css</p>
     </div>
   </body>
 </html>
