--- a/live-servers/xampp-server-test/index.html
+++ b/live-servers/xampp-server-test/index.html
@@ -1,13 +1,14 @@
+<!DOCTYPE html>
 <html>
-<head>
-  <title>My Site</title>
-</head>
-
-<body>
-  <h1>Testing XAMPP server</h1>
-  <div>
-    <p>Hello</p>
-    <p>World</p>
-  </div>
-</body>
+  <head>
+    <meta charset="utf-8">
+    <title>My Site</title>
+  </head>
+  <body>
+    <h1>Testing XAMPP Server</h1>
+    <div>
+      <p>Hello</p>
+      <p>World</p>
+    </div>
+  </body>
 </html>
