addded info to app

--- a/node/hello-websockets/example-01/index.html
+++ b/node/hello-websockets/example-01/index.html
@@ -15,7 +15,7 @@
         <p class="lead">This example demonstrates how to send and receive data from a node.js server.</p>
         <ul>
           <li>Client to Server: Click the button to send a message to the server and print out to the console. </li>
-          <li>Server to Client: Every 2 seconds a random number will be sent from the server to the client and shown in the document.</li>
+          <li>Server to Client: Every 2 seconds a random number will be sent from the server to the client and shown in the document. It also shows up un the develoepr console as an Object.</li>
         </ul>
         <button id="to-server" class="btn btn-primary" type="submit">Send Message to Server</button>
         <br><br>
